# segatools

./: .dockerignore  .gitignore  dockerbuild.bat  dockerfile  meson.build  mkdist
aimeio/: aimeio.c  hid.c  hid.h  meson.build  window.c  window.h
board/: io4.c  io4.h  led1509306-cmd.h  led1509306-frame.c  led1509306-frame.h  led1509306.c  led1509306.h  meson.build  sg-nfc.c
chunihook/: config.c  config.h  dllmain.c  led1509306.c  led1509306.h  meson.build
chuniio/: chuniio.c  chuniio.def  chuniio.h  config.c  config.h  leddata.h  ledoutput.c  ledoutput.h  meson.build  pipeimpl.c  pipeimpl.h  serialimpl.c  serialimpl.h
doc/: 15093-06.txt
mu3hook/: config.c  config.h  dllmain.c  io4.c  io4.h
mu3io/: config.c  config.h  leddata.h  ledoutput.c  ledoutput.h  meson.build  mu3io.c  mu3io.def  mu3io.h  pipeimpl.c  pipeimpl.h  serialimpl.c  serialimpl.h
